tests/integration/fail/comparison_leq_bool_array.ncl
# test = 'error' 
#
# [metadata]
# error = 'EvalError::NAryPrimopTypeError'
true <= []
